fixed modal on smaller displays

--- a/web-client/src/styles.css
+++ b/web-client/src/styles.css
@@ -198,7 +198,7 @@ h6 {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px) brightness(0.6);
     overflow-y: auto;
 }
 
@@ -206,10 +206,10 @@ h6 {
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: 10;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.6);
 }
 
 .photoViewer {
@@ -235,6 +235,13 @@ h6 {
     max-width: 100%;
     border-radius: 20px;
     padding: 20px 40px 40px 40px;
+}
+
+@media only screen and (max-height: 850px) {
+    .modalForm {
+        margin-top: 400px;
+        margin-bottom: 100px;
+    }
 }
 
 .modalForm > h4 {
